# PickerWheelApp

./: .env.example  .gitignore  ConfettiGifMaker.html  LICENSE  NOTICE  README.md  TERMS.md  confetti-demo.html  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_classroom.py  routes_picker.py  routes_projects.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: picker.py  project.py
backend/app/services/: classroom_service.py  picker_service.py  project_service.py
backend/scripts/: seed.py
backend/tests/: test_picker_service.py  test_projects_api.py
docs/: Features compare.md  api.md  architecture.md  deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: ConfettiGifMaker.html  confetti-demo.html
frontend/src/: main.tsx
frontend/src/components/: AdvancedEditor.tsx  ClassManager.tsx  ClassSelector.tsx  ControlBar.tsx  HeaderProjectSelector.tsx  HelpPage.tsx  LastWinner.tsx  ListPanel.tsx  Modal.tsx  ProjectManager.tsx  ResultsPanel.tsx  SettingsPanel.tsx  SpinnerWheel.tsx  WinnerDialog.tsx
frontend/src/components/__tests__/: SpinnerWheel.test.ts
frontend/src/services/: api.ts  export.ts  settings.ts  sounds.ts  storage.ts
frontend/src/services/__tests__/: storage.test.ts
frontend/src/styles/: app.css
